// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> should render and match snapshot for default props 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 31,
        "lineHeight": 43,
      },
    ]
  }
  testID="undefined"
  variant="body"
/>
`;

exports[`<Typography /> should render and match snapshot for variant caption1 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 24,
        "lineHeight": 31,
      },
    ]
  }
  testID="undefined"
  variant="caption1"
/>
`;

exports[`<Typography /> should render and match snapshot for variant caption2 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 22,
        "lineHeight": 26,
      },
    ]
  }
  testID="undefined"
  variant="caption2"
/>
`;

exports[`<Typography /> should render and match snapshot for variant footnote 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 26,
        "lineHeight": 35,
      },
    ]
  }
  testID="undefined"
  variant="footnote"
/>
`;

exports[`<Typography /> should render and match snapshot for variant headline 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 33,
        "lineHeight": 43,
      },
    ]
  }
  testID="undefined"
  variant="headline"
/>
`;

exports[`<Typography /> should render and match snapshot for variant largeTitle 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 67,
        "lineHeight": 80,
      },
    ]
  }
  testID="undefined"
  variant="largeTitle"
/>
`;

exports[`<Typography /> should render and match snapshot for variant subhead 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 29,
        "lineHeight": 39,
      },
    ]
  }
  testID="undefined"
  variant="subhead"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title1 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 55,
        "lineHeight": 67,
      },
    ]
  }
  testID="undefined"
  variant="title1"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title2 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 43,
        "lineHeight": 55,
      },
    ]
  }
  testID="undefined"
  variant="title2"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title3 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 39,
        "lineHeight": 49,
      },
    ]
  }
  testID="undefined"
  variant="title3"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title4 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 35,
        "lineHeight": 43,
      },
    ]
  }
  testID="undefined"
  variant="title4"
/>
`;
